--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -1,9 +1,7 @@
-{% extends "main.html" %}
+{% extends "pmain.html" %}
 {% block body %}
 {% load static %}
-	
-	<!--page-banner-area start-->
-	<div class="page-banner height-200 bg-1">
+<div class="page-banner height-200 bg-1">
 		<div class="d-table">
 			<div class="page-title vertical-middle text-center">
 				<h2>Checkout</h2>
@@ -34,111 +32,98 @@
 	<div class="checkout-area mt-65">
 		<div class="container">
 			<div class="row mt-10">
-				<div class="col-lg-8">
+				<div class="col-lg-12">
 					<div class="billing-form">
 						<h4>Billing Address</h4>
-						<form action="#">
+						<form method="POST" action="">
+							{% csrf_token %}
 							<div class="row align-items-center">
 								<div class="col-lg-3">
-									<label>FIRST NAME *</label>
+									<label>FULL NAME *</label>
 								</div>
 								<div class="col-lg-9">
-									<input type="text" />
+									<input type="text" name="name" value="{{request.user.first_name}} {{request.user.last_name}}" readonly />
 								</div>
 							</div>
-							<div class="row align-items-center">
-								<div class="col-lg-3">
-									<label>LAST NAME *</label>
-								</div>
-								<div class="col-lg-9">
-									<input type="text" />
-								</div>
-							</div>
-							<div class="row align-items-center">
-								<div class="col-lg-3">
-									<label>INSTITUTION NAME</label>
-								</div>
-								<div class="col-lg-9">
-									<input type="text" />
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-lg-3">
-									<label>ADDRESS *</label>
-								</div>
-								<div class="col-lg-9">
-									<input type="text" placeholder="Street Address" />
-									<input type="text" placeholder="Apartment, suite, unite ect (optinal)" class="mt-30" />
-								</div>
-							</div>
+<!--							<div class="row align-items-center">-->
+<!--								<div class="col-lg-3">-->
+<!--									<label>INSTITUTION NAME</label>-->
+<!--								</div>-->
+<!--								<div class="col-lg-9">-->
+<!--									<input type="text" />-->
+<!--								</div>-->
+<!--							</div>-->
 							<div class="row align-items-center">
 								<div class="col-lg-3">
 									<label>EMAIL ADDRESS *</label>
 								</div>
 								<div class="col-lg-9">
-									<input type="text" />
+									<input type="email" name="email" value="{{request.user.username}}" readonly />
 								</div>
 							</div>
-							<div class="row align-items-center">
-								<div class="col-lg-3">
-									<label>PHONE *</label>
-								</div>
-								<div class="col-lg-9">
-									<input type="text" />
+<!--							<div class="row align-items-center">-->
+<!--								<div class="col-lg-3">-->
+<!--									<label>PHONE *</label>-->
+<!--								</div>-->
+<!--								<div class="col-lg-9">-->
+<!--									<input type="text" name="phone" required/>-->
+<!--								</div>-->
+<!--							</div>-->
+							<div class="order-details mt-30">
+								<h4>Your Order</h4>
+								<div class="order-details-inner">
+
+									<div class="row mt-30">
+										<div class="col-md-8">
+											<div class="row align-items-center">
+												<div class="col-lg-4">
+													<label>COURSE NAME*</label>
+												</div>
+												<div class="col-lg-8">
+													<input type="text" name="course" value="{{mycart.title}}" readonly/>
+												</div>
+											</div>
+										</div>
+											<div class="col-md-8">
+											<div class="row align-items-center">
+												<div class="col-lg-4">
+													<label>TOTAL</label>
+												</div>
+												<div class="col-lg-8">
+													<input type="text" value="{{mycart.price}}" readonly/>
+												</div>
+											</div>
+										</div>
+  									</div>
+									<div class="payment-gateways mt-30">
+
+										<div class="row align-items-center">
+											<div class="col-lg-3">
+												<label>Bkash/Nogod Transection Number</label>
+											</div>
+											<div class="col-lg-9">
+												<input type="number" name="Transection_Number"/>
+											</div>
+										</div>
+										<div class="row align-items-center">
+											<div class="col-lg-3">
+												<label>Bkash/Nogod Transection ID</label>
+											</div>
+											<div class="col-lg-9">
+												<input type="text" name="TransectionID"/>
+											</div>
+										</div>
+									</div>
+									<div class="place-order text-center mt-60">
+										<button type="submit" class="btn-common width-180">Place porder</button>
+									</div>
 								</div>
 							</div>
 						</form>
 					</div>
 				</div>
-				<div class="col-lg-4 mt-sm-50">
-					<div class="sidebar-checkout">
-						<h4>Promotrional Code</h4>
-						<div class="cart-coupon style-2">
-							<p>Enter your coupon code if you have one</p>
-							<input type="text" placeholder="Coupon code" />
-							<button class="btn-common mt-30">APPLY</button>
-						</div>
-					</div>
-					<div class="order-details mt-30">
-						<h4>Your Order</h4>
-						<div class="order-details-inner">
-							<table>
-								<thead>
-									<tr>
-										<th>PRODUCT</th>
-										<th>TOTAL</th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr>
-										<td>Learn Adobe Photoshop</td>
-										<td><strong>&#2547; 260.00</strong></td>
-									</tr>
-									<tr>
-										<td>ORDER TOTAL</td>
-										<td><strong>&#2547; 460.00</strong></td>
-									</tr>
-								</tbody>
-							</table>
-							<div class="payment-gateways mt-30">
-								<div class="single-payment-gateway">
-									<input type="radio" id="system2" />
-									<label for="system2">Cheque Payment</label>
-								</div>
-								<div class="single-payment-gateway">
-									<input type="radio" id="system3" />
-									<label for="system3">Paypal</label>
-								</div>
-							</div>
-							<div class="place-order text-center mt-60">
-								<a href="#" class="btn-common width-180">place porder</a>
-							</div>
-						</div>
-					</div>
-				</div>
+
 			</div>
 		</div>
 	</div>
-	<!--checkout-area end-->
-	
 {% endblock body %}
