--- a/templates/main.html
+++ b/templates/main.html
@@ -54,7 +54,7 @@
 						<nav>
 							<ul>
 								<li><a href="{%url 'phome'%}">Home</a></li>
-								<li><a href="course-grid.html">Courses</a></li>
+								<li><a href="{%url 'allcourse'%}">Courses</a></li>
 								<li><a href="">About Us</a></li>
 								<li><a href="{%url 'contact'%}">Contact</a></li>
                                 <li><a href="{%url 'compiler'%}">Compiler</a></li>
