--- a/templates/pmain.html
+++ b/templates/pmain.html
@@ -50,7 +50,7 @@
 						<nav>                                
 							<ul>
 								<li><a href="{%url 'phome'%}">Home</a></li>
-								<li><a href="course-grid.html">Courses</a></li>
+								<li><a href="{%url 'allcourse'%}">Courses</a></li>
 								<li><a href="">About Us</a></li>
 								<li><a href="{%url 'contact'%}">Contact</a></li>
                                 <li><a href="{%url 'compiler'%}">Compiler</a></li>
@@ -62,7 +62,7 @@
 						<nav id="mobile-menu">                                
 							<ul>
 								<li><a href="{%url 'phome'%}">Home</a></li>
-								<li><a href="course-grid.html">Courses</a></li>
+								<li><a href="">Courses</a></li>
 								<li><a href="">About Us</a></li>
 								<li><a href="contact.html">Contact</a></li>
 							</ul>
